// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders component 1`] = `
<div
  class="sc-bwzfXH ilYHYa sc-bdVaJa dQdFv"
>
  <span
    class="sc-ifAKCX XBTtJ"
  >
    10°c
  </span>
  <span
    class="sc-EHOje exztiK"
  >
    Toronto
  </span>
</div>
`;

exports[`renders correctly 1`] = `
<div
  class="sc-bwzfXH ilYHYa sc-bdVaJa dQdFv"
>
  <span
    class="sc-ifAKCX XBTtJ"
  >
    15°c
  </span>
  <span
    class="sc-EHOje exztiK"
  >
    London
  </span>
</div>
`;

exports[`renders correctly shallow 1`] = `
<Styled(styled.div)
  onClick={[Function]}
>
  <LargeText>
    15
    °c
  </LargeText>
  <SmallText>
    London
  </SmallText>
</Styled(styled.div)>
`;
